# orangewood_sim_stack

./: README.md
docker/: Dockerfile  build_image.bash  delete_all_img.bash  install_main_dependencies.sh  new_sim_session.bash  requirements.txt  run_image.bash  setup_host_machine.sh
docs/: api_docs.md
host_pc_scripts/: setup_host_pc.bash
owl/moveit_pkgs/owl_moveit_bringup/: CMakeLists.txt  package.xml
owl/moveit_pkgs/owl_moveit_bringup/launch/: bringup.launch
owl/owl_bringup/: CMakeLists.txt  package.xml
owl/owl_bringup/launch/: bringup.launch
owl/owl_description/: CMakeLists.txt  package.xml
owl/owl_description/launch/6.5/: visualize_6.5_pneumatic_rviz.launch  visualize_6.5_robotiq2f85_rviz.launch  visualize_6.5_rviz.launch  visualize_6.5_vaccum_rviz.launch
owl/owl_description/meshes/6.5/collision/camera/d435/: d435.stl
owl/owl_description/meshes/6.5/collision/camera_stand/robogpt_stand/: robogpt_stand.stl
owl/owl_description/meshes/6.5/collision/gripper/spring_loaded/: base_link.STL
owl/owl_description/meshes/6.5/collision/holder/: Camera_Ur5e_gripper_Mount_Disc.STL
owl/owl_description/meshes/6.5/collision/owl_robot/: elbow_link.stl  shoulder_link.stl  w2w3_link.stl
owl/owl_description/meshes/6.5/visual/gripper/pneumatic/: ANG_GRIPPER.STL
owl/owl_description/meshes/6.5/visual/holder/: ARUCO_HOLDER.STL  MOUNT.STL
owl/owl_description/meshes/6.5/visual/owl_robot/: base_link.stl  end_effector_link.stl  link1.stl  link2.stl
owl/owl_description/meshes/grippers/pneumatic/: pneumatic.stl
owl/owl_description/meshes/grippers/vaccum/: base_link.stl
owl/owl_description/rviz/: rviz.rviz
owl/owl_description/urdf/6.5/: owl.xacro  robot.xacro  robot_pneumatic.xacro  robot_robotiq2f85.xacro  robot_vaccum.xacro
owl/owl_description/urdf/6.5/gazebo/: gazebo_6.5_control.xacro
owl/owl_description/urdf/grippers/pneumatic/: pneumatic.xacro
owl/owl_description/urdf/grippers/robotiq2f85/: robotiq2f85.gazebo.xacro  robotiq2f85.urdf.xacro
owl/owl_description/urdf/grippers/vaccum/: vaccum_gripper.xacro
owl/owl_gazebo/: CMakeLists.txt  package.xml
owl/owl_gazebo/config/: owl_traj_ctrl.yaml  owl_traj_ctrl_robotiq2f85.yaml
owl/owl_gazebo/launch/bringup/: owl_bringup.launch
owl/owl_gazebo/launch/empty_world/: owl_gazebo.launch  owl_gazebo_pneumatic.launch  owl_gazebo_robotiq2f85.launch  owl_gazebo_vacuum.launch
owl/owl_gazebo/models/stand/: model.sdf
owl/owl_gazebo/models/stand/meshes/: stand.dae
owl/owl_gazebo/rviz/: rviz.rviz
owl/owl_gazebo/urdf/: owl_6.5_gazebo_control.xacro  owl_6.5_gazebo_control_pneumatic.xacro  owl_6.5_gazebo_control_robotiq2f85.xacro  owl_6.5_gazebo_control_vaccum.xacro
owl/owl_gazebo/world/: stand.world  table.world
owl/owl_perception/: CMakeLists.txt  package.xml
owl/owl_perception/launch/: owl_gazebo_camera.launch  owl_gazebo_camera_pneumatic.launch  owl_gazebo_camera_robotiq2f85.launch  owl_gazebo_camera_vaccum.launch
owl/owl_perception/launch/bringup/: owl_bringup.launch
owl/owl_perception/urdf/: owl_6.5_gazebo_control_camera.xacro  owl_6.5_gazebo_control_pneumatic_camera.xacro  owl_6.5_gazebo_control_robotiq2f85_camera.xacro  owl_6.5_gazebo_control_vaccum_camera.xacro
owl/owl_perception/urdf/camera/d415/: d415.urdf.xacro
owl/owl_perception/urdf/camera/d435/: d435.gazebo.xacro  d435.urdf.xacro
(+97 files in other folders)
