<?xml version="1.0"?>
<package format="2">
  <name>owl_bringup</name>
  <version>0.0.0</version>
  <description>The owl_bringup package</description>

  <maintainer email="lentin@orangewood.co">Lentin</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <exec_depend>timed_roslaunch</exec_depend>


</package>
