<?xml version="1.0"?>
<package format="2">
  <name>owl_perception</name>
  <version>0.0.0</version>
  <description>The owl_perception package</description>

  <maintainer email="lentin@orangewood.co">Lentin</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>realsense_gazebo_plugin</build_depend>
  <build_export_depend>realsense_gazebo_plugin</build_export_depend>
  <exec_depend>realsense_gazebo_plugin</exec_depend>

  <exec_depend>perception</exec_depend>


</package>
