<?xml version="1.0"?>
<package format="2">
  <name>owl_moveit_bringup</name>
  <version>0.0.0</version>
  <description>The owl_moveit_bringup package</description>

  <maintainer email="lentin@orangewood.co">Lentin</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  
</package>
